--- a/css/mobile.css
+++ b/css/mobile.css
@@ -7,13 +7,37 @@ mobile styles
 
 @media (max-width: 720px) {
 
-  /* contains all header links */
-  nav {
-    display: flex;
+  * {
+    padding: 0;
+    margin: 0;
+    border: 0;
+
+    /* variables */
+    --font-stack: Montserrat, Arial, serif; /* font stack */
+    --header-gradient: linear-gradient(to right, #003cb5, #00839b); /* header gradient */
+    --drop-shadow: 2px 2px 10px rgba(0, 0, 0, 0.25); /* drop shadow */
+    --content-color: #333;
+    --data-color: #3A3A3A;
+    --footer-color: #2F2F2F;
+    --text-color: #EEE;
+  }
+
+  /* configure links */
+  a, a:visited, a:hover {
+    color: var(--text-color);
+    text-decoration: none;
+  }
+
+  /* set parameters for website body */
+  body {
     width: 100%;
     height: 100%;
-    margin: auto;
+    font-family: var(--font-stack);
+    font-size: 18px;
+    text-align: center;
+    background: var(--content-color);
   }
+
 
   /* main body of website where most text lies */
   #content {
@@ -23,41 +47,6 @@ mobile styles
     height: auto;
     background: var(--content-color);
     padding-bottom: 3em;
-  }
-
-  /* hide elements not needed for mobile version of website */
-  #footer {
-    display: none
-  }
-
-  /* website title */
-  #title {
-    color: var(--text-color);
-    font-size: 28px;
-  }
-
-  /* profile picture */
-  #profile {
-    width: 6em;
-    border-radius: 6em;
-  }
-
-  /* container that holds website title */
-  #title_container {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    vertical-align: middle;
-    top: 0;
-    width: 100%;
-    height: 14em;
-    background: linear-gradient(to right, #0041c6cc, #0099b5cc), url('../img/icons/banner.jpg') center;
-    background-size: cover;
-  }
-
-  /* section titles */
-  .section_title {
-    padding: 1em 0;
   }
 
   /* div that holds about page information */
@@ -70,8 +59,60 @@ mobile styles
     background: var(--data-color);
   }
 
-  /* website header (acts like footer on mobile) */
-  .header {
+  /* content div images */
+  .data_div img {
+    float: top;
+    height: 3em;
+  }
+
+  /* content div text */
+  .data_div p {
+    font-size: 26px;
+    text-align: center;
+    color: var(--text-color);
+  }
+
+  /* hide elements not needed for mobile version of website */
+  #footer {
+    display: none
+  }
+
+  /* container that holds website title */
+  #header_img {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    vertical-align: middle;
+    top: 0;
+    width: 100%;
+    height: 14em;
+    background: linear-gradient(to right, #0041c6cc, #0099b5cc), url('../img/icons/banner.jpg') center;
+    background-size: cover;
+  }
+
+  /* link container */
+  #link_div {
+    display: flex;
+    width: 100%;
+    height: 100%;
+  }
+
+  /* container that holds images used by links on header */
+  .link_wrap {
+    flex: 25%;
+    float: left;
+    padding: 0.25em;
+  }
+
+  /* sets header link image size */
+  .link_wrap svg {
+    height: 2.5em;
+    fill: #FFF;
+    transition: 0.05s;
+  }
+
+  /* navigation bar */
+  nav {
     position: fixed;
     z-index: 2;
     width: 100%;
@@ -79,6 +120,12 @@ mobile styles
     height: 3em;
     background: var(--header-gradient);
     box-shadow: var(--drop-shadow);
+  }
+
+  /* profile picture */
+  #profile {
+    width: 6em;
+    border-radius: 6em;
   }
 
   /* container that holds project information */
@@ -95,5 +142,30 @@ mobile styles
   /* text for project div */
   .project_div p {
     font-size: 24px;
+  }
+
+  /* text that is located on project divs */
+  .project_text {
+    width: 70%;
+    border-radius: 0 0 1em 1em;
+    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.25);
+    margin: auto;
+    padding: 0.2em;
+    font-size: 28px;
+    background: var(--data-color);
+  }
+
+  /* title for each section of website */
+  .section_title {
+    text-align: center;
+    padding: 1em 0;
+    font-size: 2em;
+    color: var(--text-color);
+  }
+
+  /* website title */
+  #title {
+    color: white;
+    font-size: 28px;
   }
 }
