--- a/src/app/components/info-group/info-group.component.scss
+++ b/src/app/components/info-group/info-group.component.scss
@@ -3,4 +3,15 @@
   max-width: 65em;
   min-width: 40em;
   margin: auto;
+  align-items: stretch;
+}
+
+app-info {
+  padding: 1.5em;
+  line-height: 1.5;
+  border-radius: 2em;
+  margin: 0.5em;
+  box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.25);
+  background: #3A3A3A;
+  box-sizing: border-box;
 }
