--- a/src/app/components/about-page/about-page.component.html
+++ b/src/app/components/about-page/about-page.component.html
@@ -1,4 +1,4 @@
 <div class="content">
   <app-info-group *ngFor="let infoGroup of getInfoGroups()" [title]="infoGroup.title"
-                  [infoArray]="infoGroup.infoArray" flex="calc({{infoGroup.flex}}% - 1em)"></app-info-group>
+                  [infoArray]="infoGroup.infoArray"></app-info-group>
 </div>
