--- a/src/app/components/footer/footer.component.scss
+++ b/src/app/components/footer/footer.component.scss
@@ -1,3 +1,5 @@
+@import '../../../variables';
+
 .footer {
   display: flex;
   justify-content: center;
@@ -9,4 +11,8 @@
   color: #727272;
   font-weight: bold;
   font-size: 20px;
+
+  @media screen and (max-width: $screen-cutoff) {
+    display: none;
+  }
 }
