--- a/src/app/components/header/header.component.scss
+++ b/src/app/components/header/header.component.scss
@@ -1,41 +1,82 @@
+@import '../../../variables';
+
+$gradient: linear-gradient(to right, #003cb5, #00839b);
+$img-gradient: linear-gradient(to right, #0041c6cc, #0099b5cc);
+$img: url('../../../assets/img/icons/banner.jpg');
+
 .headerImg {
-  z-index: -1;
   width: 100%;
-  height: 20em;
-  background: linear-gradient(to right, #0041c6cc, #0099b5cc), url('../../../assets/img/icons/banner.jpg') center;
+  background: $img-gradient, $img center;
   background-size: cover;
+
+  @media screen and (min-width: $screen-cutoff) {
+    z-index: -1;
+    height: 20em;
+  }
+
+  @media screen and (max-width: $screen-cutoff) {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    vertical-align: middle;
+    top: 0;
+    height: 14em;
+  }
 }
 
 .linkContainer {
   display: flex;
   height: 100%;
-  max-width: 50em;
-  min-width: 40em;
-  margin: auto;
+
+  @media screen and (min-width: $screen-cutoff) {
+    max-width: 50em;
+    min-width: 40em;
+    margin: auto;
+  }
+
+  @media screen and (max-width: $screen-cutoff) {
+    width: 100%;
+  }
 }
 
 .titleContainer {
-  position: relative;
-  top: 50%;
-  transform: translateY(-50%);
+  @media screen and (min-width: $screen-cutoff) {
+    position: relative;
+    top: 50%;
+    transform: translateY(-50%);
+  }
 }
 
 .title {
   font-weight: bold;
   color: white;
-  font-size: 3em;
-  text-shadow: var(--drop-shadow);
+  text-shadow: $drop-shadow;
   -webkit-user-select: none;
   -moz-user-select: none;
   -ms-user-select: none;
   user-select: none;
+
+  @media screen and (min-width: $screen-cutoff) {
+    font-size: 3em;
+  }
+
+  @media screen and (max-width: $screen-cutoff) {
+    font-size: 28px;
+  }
 }
 
 .profileImg {
-  display: inline-block;
-  text-align: center;
-  width: 8em;
-  border-radius: 8em;
+  @media screen and (min-width: $screen-cutoff) {
+    display: inline-block;
+    text-align: center;
+    width: 8em;
+    border-radius: 8em;
+  }
+
+  @media screen and (max-width: $screen-cutoff) {
+    width: 6em;
+    border-radius: 6em;
+  }
 }
 
 button {
@@ -59,13 +100,23 @@ button svg {
 }
 
 nav {
-  position: sticky;
   z-index: 2;
-  top: 0;
-  height: 3.5em;
-  max-width: 100%;
-  min-width: 40em;
-  text-align: center;
-  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.25);
-  background: linear-gradient(to right, #003cb5, #00839b);
+  background: $gradient;
+  box-shadow: $drop-shadow;
+
+  @media screen and (min-width: $screen-cutoff) {
+    position: sticky;
+    top: 0;
+    height: 3.5em;
+    max-width: 100%;
+    min-width: 40em;
+    text-align: center;
+  }
+
+  @media screen and (max-width: $screen-cutoff) {
+    position: fixed;
+    width: 100%;
+    bottom: 0;
+    height: 3em;
+  }
 }
