--- a/src/app/components/info-group/info-group.component.scss
+++ b/src/app/components/info-group/info-group.component.scss
@@ -1,17 +1,33 @@
+@import '../../../variables';
+
 .row {
-  flex-wrap: wrap;
-  max-width: 65em;
-  min-width: 40em;
-  margin: auto;
-  align-items: stretch;
+  @media screen and (min-width: $screen-cutoff) {
+    display: flex;
+    flex-wrap: wrap;
+    max-width: 65em;
+    min-width: 40em;
+    margin: auto;
+    align-items: stretch;
+  }
 }
 
 app-info {
-  padding: 1.5em;
-  line-height: 1.5;
-  border-radius: 2em;
-  margin: 0.5em;
-  box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.25);
-  background: #3A3A3A;
+  display: block;
   box-sizing: border-box;
+  float: left;
+  border-radius: 2em;
+  line-height: 1.5;
+  margin: 0.5em;
+  box-shadow: $drop-shadow;
+  background: $content-color;
+
+  @media screen and (min-width: $screen-cutoff) {
+    flex: 33%;
+    padding: 1.5em;
+  }
+
+  @media screen and (max-width: $screen-cutoff) {
+    padding: 2em;
+    width: 100%;
+  }
 }
