--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,4 +1,5 @@
 @import 'https://fonts.googleapis.com/css?family=Montserrat:400,700';
+@import 'variables';
 
 * {
   padding: 0;
@@ -7,34 +8,45 @@
 }
 
 body {
-  font-size: 18px;
-  font-family: Montserrat, Arial, serif;
   width: 100%;
   height: 100%;
   text-align: center;
-  background: #333;
+  font-size: $default-font-size;
+  font-family: $font-stack;
+  background: $body-color;
 }
 
 /* configure links */
 a, a:visited, a:hover {
-  color: #EEE;
+  color: $text-color;
   text-decoration: none;
 }
 
 .content {
-  position: relative;
   z-index: 1;
-  max-width: 65em;
-  min-width: 40em;
   margin: auto;
   height: auto;
-  padding-bottom: 2em;
+
+  @media screen and (min-width: $screen-cutoff) {
+    position: relative;
+    max-width: 65em;
+    min-width: 40em;
+    padding-bottom: 2em;
+  }
+
+  @media screen and (max-width: $screen-cutoff) {
+    width: 100%;
+    padding-bottom: 3em;
+  }
 }
 
 .sectionTitle {
   text-align: center;
   padding: 1.5em 0;
   font-size: 2em;
-  color: #EEE;
-}
+  color: $text-color;
 
+  @media screen and (max-width: $screen-cutoff) {
+    padding: 1em 0;
+  }
+}
