--- a/src/app/components/project/project.component.html
+++ b/src/app/components/project/project.component.html
@@ -1,3 +1,4 @@
+<!-- project information container -->
 <a class="project" [href]="url" [ngStyle]="style" target="_blank">
   <div class="projectText">
     <p>{{title}}</p>
