--- a/src/app/components/info/info.component.html
+++ b/src/app/components/info/info.component.html
@@ -1,3 +1,4 @@
+<!-- container that holds information on about page -->
 <div class="infoContainer">
   <img *ngIf="img" [src]="img" [alt]="imgAlt">
   <p><b>{{header}}</b></p>
