--- a/src/app/components/info/info.component.scss
+++ b/src/app/components/info/info.component.scss
@@ -1,12 +1,32 @@
 @import '../../../variables';
 
-/* content div images */
+/* container that holds about page information */
+.infoContainer {
+  line-height: 1.5;
+  border-radius: 2em;
+  margin: 0.5em;
+  box-shadow: $drop-shadow;
+  background: $content-color;
+
+  /* desktop styles */
+  @media screen and (min-width: $screen-cutoff) {
+    padding: 1.5em;
+    height: calc(100% - 4em);
+  }
+
+  /* mobile styles */
+  @media screen and (max-width: $screen-cutoff) {
+    padding: 2em;
+  }
+}
+
+/* image in info container */
 .infoContainer img {
   float: top;
   height: 3em;
 }
 
-/* content div text */
+/* text in info container */
 .infoContainer p {
   font-size: 26px;
   text-align: center;
