Updated font, favicon, and color scheme

--- a/src/app/components/header/header.component.scss
+++ b/src/app/components/header/header.component.scss
@@ -1,7 +1,7 @@
 @import '../../../variables';
 
-$gradient: linear-gradient(to right, #003cb5, #00839b);
-$img-gradient: linear-gradient(to right, #0041c6cc, #0099b5cc);
+$gradient: linear-gradient(to right, #0b96e0, #57b7eb);
+$img-gradient: linear-gradient(to right, #0b96e0cc, #57b7ebcc);
 $img: url('../../../assets/img/icons/banner.jpg');
 
 /* image in header */
