--- a/src/app/components/footer/footer.component.scss
+++ b/src/app/components/footer/footer.component.scss
@@ -8,7 +8,7 @@
   flex-direction: column;
   height: 12em;
   line-height: 1.5;
-  background: #2F2F2F;
+  background: #1A1A1A;
   color: #727272;
   font-weight: bold;
   font-size: 20px;
