--- a/src/variables.scss
+++ b/src/variables.scss
@@ -3,10 +3,10 @@ $screen-cutoff: 720px;
 $default-font-size: 18px;
 
 /* colors */
-$body-color: #333;
+$body-color: #222;
 $text-color: #EEE;
-$content-color: #3A3A3A;
+$content-color: #2A2A2A;
 
 /* styles */
 $drop-shadow: 2px 2px 10px rgba(0, 0, 0, 0.25);
-$font-stack: Montserrat, Arial, serif;
+$font-stack: 'Lexend Deca', Arial, serif;
