--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,1 +1,9 @@
-
+app-header {
+  z-index: 2;
+  display: block;
+  position: fixed;
+  top: 0;
+  background: whitesmoke;
+  width: 100%;
+  height: 3em;
+}
