--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,4 +1,3 @@
-@import 'https://fonts.googleapis.com/css?family=Montserrat:400,700';
 @import 'https://fonts.googleapis.com/css?family=Lexend+Deca&display=swap';
 @import 'variables';
 
@@ -14,7 +13,7 @@ body {
   text-align: center;
   font-size: $default-font-size;
   font-family: $font-stack;
-  background: $body-color;
+  background: #AAA;
 }
 
 /* configure links */
