many many revisions

--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,4 +1,4 @@
-<img src="../../../assets/img/header_img/logo.png" alt="Paul Scott">
+<img src="../../../assets/img/logo.svg" alt="Paul Scott">
 <nav>
   <a (click)="showAboutPage()">About Me</a>
   <a (click)="showProjectsPage()">Projects</a>
