--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -7,3 +7,13 @@ app-header {
   width: 100%;
   height: 3em;
 }
+
+app-header-img {
+  display: block;
+  position: relative;
+  width: 100%;
+  height: 20em;
+  margin-top: 2em;
+  background: url('../assets/img/circuit.png') center;
+  background-size: cover;
+}
