--- a/src/app/components/project/project.component.scss
+++ b/src/app/components/project/project.component.scss
@@ -1,23 +1,20 @@
-@import '../../../variables';
-
-/* container that holds project information */
 .project {
   padding: 0;
   line-height: 1.5;
   border-radius: 2em;
   margin: 0.5em;
-  box-shadow: $drop-shadow;
+  box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.25);
 
   /* desktop styles */
-  @media screen and (min-width: $screen-cutoff) {
+  @media screen and (min-width: 700px) {
     position: relative;
     display: inline-block;
-    width: 30em;
     height: 24em;
+    width: 30em;
   }
 
   /* mobile styles */
-  @media screen and (max-width: $screen-cutoff) {
+  @media screen and (max-width: 700px) {
     display: block;
     height: 18em;
     line-height: 1.5;
@@ -34,12 +31,11 @@
 .projectText {
   padding: 0.2em;
   font-size: 28px;
-  background: $content-color;
   border-radius: 0 0 1em 1em;
   box-shadow: 0 2px 10px rgba(0, 0, 0, 0.25);
 
   /* desktop styles */
-  @media screen and (min-width: $screen-cutoff) {
+  @media screen and (min-width: 700px) {
     position: absolute;
     width: 12em;
     left: 50%;
@@ -47,7 +43,7 @@
   }
 
   /* mobile styles */
-  @media screen and (max-width: $screen-cutoff) {
+  @media screen and (max-width: 700px) {
     width: 70%;
     margin: auto;
   }
