--- a/src/app/pages/about-page/about-page.component.scss
+++ b/src/app/pages/about-page/about-page.component.scss
@@ -1,14 +1,17 @@
-@import '../../../variables';
-
 .content {
   display: block;
-  max-width: 65em;
-  min-width: 40em;
-  margin-top: 6em;
+  width: 100%;
+}
+
+.section_title {
+  width: 12em;
+  padding: 1em;
+  font-size: 28px;
+  text-align: right;
+  color: whitesmoke;
 }
 
 .info_block_group {
-  display: block;
   width: 100%;
   flex-wrap: wrap;
 }
@@ -16,8 +19,8 @@
 app-info {
   display: block;
   line-height: 1.5;
-  height: 12em;
-  margin: 0.25em;
-  box-shadow: $drop-shadow;
+  height: 33vh;
+  float: bottom;
+  box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.25);
   background-size: cover;
 }
