--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,5 +1,4 @@
 @import 'https://fonts.googleapis.com/css?family=Lexend+Deca&display=swap';
-@import 'variables';
 
 * {
   padding: 0;
@@ -11,42 +10,6 @@ body {
   width: 100%;
   height: 100%;
   text-align: center;
-  font-size: $default-font-size;
-  font-family: $font-stack;
-  background: #AAA;
-}
-
-/* configure links */
-a, a:visited, a:hover {
-  color: $text-color;
-  text-decoration: none;
-}
-
-.content {
-  z-index: 1;
-  margin: auto;
-  height: auto;
-
-  @media screen and (min-width: $screen-cutoff) {
-    position: relative;
-    max-width: 65em;
-    min-width: 40em;
-    padding-bottom: 2em;
-  }
-
-  @media screen and (max-width: $screen-cutoff) {
-    width: 100%;
-    padding-bottom: 3em;
-  }
-}
-
-.sectionTitle {
-  text-align: center;
-  padding: 1.5em 0;
-  font-size: 2em;
-  color: $text-color;
-
-  @media screen and (max-width: $screen-cutoff) {
-    padding: 1em 0;
-  }
+  font-family: 'Lexend Deca', Arial, serif;
+  background: black;
 }
