--- a/src/app/pages/about-page/about-page.component.html
+++ b/src/app/pages/about-page/about-page.component.html
@@ -3,12 +3,13 @@
 
   <!-- information group (education, work experience, etc.) -->
   <div *ngFor="let infoBlockGroup of getInfoGroups()">
-    <div class="section_title" [ngStyle]="{'background': infoBlockGroup.titleBkg}">
+    <div class="section_title">
       <p>{{infoBlockGroup.title}}</p>
     </div>
-    <div class="info_block_group" fxFlex="row">
-      <app-info fxFlex="33.333%" *ngFor="let info of infoBlockGroup.infoBlockArr"
-                [ngStyle]="{'background': 'url(' + info.backgroundImg + ')', 'background-size': 'cover'}"
+    <div class="info_block_group">
+      <app-info *ngFor="let info of infoBlockGroup.infoBlockArr"
+                [ngStyle]="{'background': 'url(' + info.backgroundImg + ') center',
+                            'background-size': 'cover'}"
                 [title]="info.title"
                 [description]="info.description"></app-info>
     </div>
