--- a/src/app/pages/about-page/about-page.component.scss
+++ b/src/app/pages/about-page/about-page.component.scss
@@ -4,14 +4,16 @@
 }
 
 .section_title {
-  width: 12em;
+  width: available;
   padding: 1em;
-  font-size: 28px;
-  text-align: right;
+  font-size: 32px;
   color: whitesmoke;
+  overflow: hidden;
+  background: black;
 }
 
 .info_block_group {
+  display: flex;
   width: 100%;
   flex-wrap: wrap;
 }
@@ -19,8 +21,9 @@
 app-info {
   display: block;
   line-height: 1.5;
-  height: 33vh;
+  height: 40vh;
   float: bottom;
+  min-width: 33.33%;
+  flex-grow: 1;
   box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.25);
-  background-size: cover;
 }
