--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,3 @@
 <app-header></app-header>
 <app-header-img></app-header-img>
-<app-about-page *ngIf="aboutPageIsVisible()"></app-about-page>
-<app-projects-page *ngIf="projectsPageIsVisible()"></app-projects-page>
+<app-content></app-content>
