--- a/src/app/components/content/content.component.scss
+++ b/src/app/components/content/content.component.scss
@@ -1,15 +1,10 @@
-.content {
-  display: block;
-  width: 100%;
-}
-
 .section_title {
   width: available;
   padding: 1em;
   font-size: 32px;
   color: whitesmoke;
   overflow: hidden;
-  background: black;
+  background: #111;
 }
 
 .info_block_group {
@@ -19,11 +14,14 @@
 }
 
 app-info {
+  flex: 30%;
   display: block;
   line-height: 1.5;
   height: 40vh;
   float: bottom;
-  min-width: 33.33%;
+  margin: 0.5em;
   flex-grow: 1;
   box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.25);
+  border-radius: 0.5em;
+  overflow: hidden;
 }
