--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,8 +1,8 @@
 <img src="../../../assets/img/logo.svg" alt="Paul Scott">
 <nav>
-  <a (click)="showAboutPage()">About Me</a>
-  <a (click)="showProjectsPage()">Projects</a>
-  <a (click)="openResume()">Resume</a>
-  <a (click)="openLinkedIn()">LinkedIn</a>
-  <a>GitHub</a>
+  <a (click)="showAboutData()">About Me</a>
+  <a (click)="showProjectData()">Projects</a>
+  <a href="https://drive.google.com/open?id=1Z79TNs30ttAftoWwJbqm93X77OljiM3L" target="_blank">Resume</a>
+  <a href="https://www.linkedin.com/in/paul-scott-047858140/" target="_blank">LinkedIn</a>
+  <a href="https://github.com/PScottZero" target="_blank">GitHub</a>
 </nav>
