--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -3,7 +3,7 @@ app-header {
   display: block;
   position: fixed;
   top: 0;
-  background: whitesmoke;
+  background: linear-gradient(to left,#0b96e0,#57b7eb);
   width: 100%;
   height: 3em;
 }
@@ -14,6 +14,12 @@ app-header-img {
   width: 100%;
   height: 50vh;
   margin-top: 2em;
-  background: linear-gradient(#AAAAAACC, #AAAAAACC), url('../assets/img/circuit.jpg') center;
+  background: linear-gradient(to left,#0b96e0cc,#57b7ebcc), url('../assets/img/circuit.jpg') center;
   background-size: cover;
+}
+
+app-content {
+  display: block;
+  margin: auto;
+  max-width: 75em;
 }
