--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -1,4 +1,6 @@
+<!-- website footer w/ description and contact info -->
 <div class="footer">
-  <p>{{footerText}}</p>
+  <p>{{about}}</p>
+  <p>{{contact}}</p>
   <p>{{lastUpdated}}</p>
 </div>
