--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,4 +1,7 @@
+<!-- logo -->
 <img src="../../../assets/img/logo.svg" alt="Paul Scott">
+
+<!-- links -->
 <nav>
   <a (click)="showAboutData()">About Me</a>
   <a (click)="showProjectData()">Projects</a>
