--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -14,12 +14,13 @@ app-header-img {
   width: 100%;
   height: 50vh;
   margin-top: 2em;
-  background: linear-gradient(to left,#0b96e0cc,#57b7ebcc), url('../assets/img/circuit.jpg') center;
+  background: linear-gradient(to left, #0b96e0cc, #57b7ebcc), url('../assets/img/circuit.jpg') center;
   background-size: cover;
+  border-radius: 0 0 1em 1em;
 }
 
 app-content {
   display: block;
   margin: auto;
-  max-width: 75em;
+  max-width: 80em;
 }
