--- a/src/app/components/content/content.component.scss
+++ b/src/app/components/content/content.component.scss
@@ -1,10 +1,18 @@
-.section_title {
-  width: available;
-  padding: 1em;
-  font-size: 32px;
-  color: whitesmoke;
+app-info, .appInfoLink{
+  flex: 30%;
+  display: block;
+  line-height: 1.5;
+  height: 20em;
+  float: bottom;
+  margin: 0.5em;
+  flex-grow: 1;
+  box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.25);
+  border-radius: 1em;
   overflow: hidden;
-  background: #222;
+}
+
+.appInfoLink:hover {
+  box-shadow: 0 0 20px #0b96e0;
 }
 
 .info_block_group {
@@ -13,15 +21,11 @@
   flex-wrap: wrap;
 }
 
-app-info {
-  flex: 30%;
-  display: block;
-  line-height: 1.5;
-  height: 40vh;
-  float: bottom;
-  margin: 0.5em;
-  flex-grow: 1;
-  box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.25);
-  border-radius: 0.5em;
+.section_title {
+  width: available;
+  padding: 1em;
+  font-size: 32px;
+  color: whitesmoke;
   overflow: hidden;
+  background: #222;
 }
