added blur and new header image

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -11,5 +11,5 @@ body {
   height: 100%;
   text-align: center;
   font-family: 'Lexend Deca', Arial, serif;
-  background: #222;
+  background: #1e2224;
 }
