--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -3,7 +3,8 @@ app-header {
   display: block;
   position: fixed;
   top: 0;
-  background: linear-gradient(to left,#0b96e0,#57b7eb);
+  background: linear-gradient(to left,#0b96e0aa,#57b7ebaa);
+  backdrop-filter: blur(10px);
   width: 100%;
   height: 3em;
 }
@@ -13,10 +14,14 @@ app-header-img {
   position: relative;
   width: 100%;
   height: 50vh;
-  margin-top: 2em;
-  background: linear-gradient(to left, #0b96e0cc, #57b7ebcc), url('../assets/img/circuit.jpg') center;
+  margin-top: 3em;
+  background: url('../assets/img/header_img.jpg') center;
   background-size: cover;
   border-radius: 0 0 1em 1em;
+
+  @media screen and (max-width: 700px) {
+    height: 40vh;
+  }
 }
 
 app-content {
