--- a/src/app/components/content/content.component.html
+++ b/src/app/components/content/content.component.html
@@ -7,7 +7,7 @@
   <!-- info blocks -->
   <div class="info_block_group">
     <app-info *ngFor="let info of infoBlockGroup.infoBlockArr"
-              [class.appInfoLink]="info.link != undefined"
+              [class.app_info_link]="info.link != undefined"
               [ngStyle]="{'background': 'url(' + info.backgroundImg + ') center',
                           'background-size': 'cover'}"
               [title]="info.title"
