--- a/src/app/components/content/content.component.scss
+++ b/src/app/components/content/content.component.scss
@@ -1,4 +1,4 @@
-app-info, .appInfoLink{
+app-info, .app_info_link{
   flex: 30%;
   display: block;
   line-height: 1.5;
@@ -6,12 +6,18 @@ app-info, .appInfoLink{
   float: bottom;
   margin: 0.5em;
   flex-grow: 1;
-  box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.25);
+  box-shadow: 10px 10px 20px rgba(0, 0, 0, 0.70);
   border-radius: 1em;
   overflow: hidden;
+
+  @media screen and (max-width: 700px) {
+    flex: 100%;
+    box-shadow: none;
+    margin: 0.5em 0;
+  }
 }
 
-.appInfoLink:hover {
+.app_info_link:hover {
   box-shadow: 0 0 20px #0b96e0;
 }
 
@@ -27,5 +33,4 @@ app-info, .appInfoLink{
   font-size: 32px;
   color: whitesmoke;
   overflow: hidden;
-  background: #222;
 }
