--- a/src/app/components/header/header.component.scss
+++ b/src/app/components/header/header.component.scss
@@ -17,6 +17,27 @@ img {
 }
 
 nav {
-  float: right;
-  line-height: 3em;
+  @media screen and (min-width: 700px) {
+    float: right;
+    line-height: 3em;
+  }
+
+  @media screen and (max-width: 700px) {
+    display: none;
+  }
+}
+
+.drop_down_menu {
+  @media screen and (min-width: 700px) {
+    display: none;
+  }
+
+  @media screen and (max-width: 700px) {
+    float: right;
+    height: 100%;
+    background: transparent;
+    font-size: 28px;
+    color: whitesmoke;
+    width: 2em;
+  }
 }
