--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -3,13 +3,19 @@ app-header {
   display: block;
   position: fixed;
   top: 0;
-  background: linear-gradient(to left,#0b96e0aa,#57b7ebaa);
+  background: #0b96e0aa;
   backdrop-filter: blur(10px);
   width: 100%;
   height: 3em;
+  transition: 0.3s;
 }
 
-app-header-img {
+.show_menu {
+  height: 19em;
+  border-radius: 0 0 1em 1em;
+}
+
+.header-img {
   display: block;
   position: relative;
   width: 100%;
@@ -23,6 +29,16 @@ app-header-img {
     height: 40vh;
   }
 }
+
+.header-img img {
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
+  height: 40%;
+  border-radius: 50%;
+}
+
 
 app-content {
   display: block;
