--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,11 +1,16 @@
 <!-- logo -->
 <img src="../../../assets/img/logo.svg" alt="Paul Scott">
 
+<div class="menu_icon" (click)="toggleMenu()">
+  <div class="menu_icon_bar" [class.rotate]="menuVisible()"></div>
+  <div class="menu_icon_bar" [class.rotate]="menuVisible()"></div>
+</div>
+
 <!-- links -->
-<nav>
+<nav [class.show_menu]="menuVisible()">
   <a (click)="showAboutData()">About Me</a>
   <a (click)="showProjectData()">Projects</a>
-  <a href="https://drive.google.com/open?id=1Z79TNs30ttAftoWwJbqm93X77OljiM3L" target="_blank">Resume</a>
-  <a href="https://www.linkedin.com/in/paul-scott-047858140/" target="_blank">LinkedIn</a>
-  <a href="https://github.com/PScottZero" target="_blank">GitHub</a>
+  <a href="https://drive.google.com/open?id=1Z79TNs30ttAftoWwJbqm93X77OljiM3L" target="_blank" (click)="closeMenu()">Resume</a>
+  <a href="https://www.linkedin.com/in/paul-scott-047858140/" target="_blank" (click)="closeMenu()">LinkedIn</a>
+  <a href="https://github.com/PScottZero" target="_blank" (click)="closeMenu()">GitHub</a>
 </nav>
