--- a/src/app/components/header/header.component.scss
+++ b/src/app/components/header/header.component.scss
@@ -12,7 +12,7 @@ a {
 
 img {
   float: left;
-  height: 100%;
+  height: 3em;
   margin-left: 0.5em;
 }
 
@@ -23,21 +23,59 @@ nav {
   }
 
   @media screen and (max-width: 700px) {
-    display: none;
+    height: 0;
+    width: 100%;
+    transition: 0.3s;
+    overflow: hidden;
+    border-radius: 0 0 1em 1em;
+
+    a {
+      display: block;
+      width: 100%;
+      font-size: 20px;
+      margin: 1em 0;
+    }
   }
 }
 
-.drop_down_menu {
+.menu_icon {
   @media screen and (min-width: 700px) {
     display: none;
   }
 
   @media screen and (max-width: 700px) {
     float: right;
-    height: 100%;
-    background: transparent;
-    font-size: 28px;
-    color: whitesmoke;
+    height: 2em;
     width: 2em;
+    margin: 0.5em 1em;
+  }
+}
+
+.menu_icon_bar {
+  width: 100%;
+  height: 0.2em;
+  background: white;
+  transition: 0.3s;
+
+  &:nth-child(1) {
+    margin-top: .6em;
+  }
+
+  &:nth-child(2) {
+    margin-top: .4em;
+  }
+}
+
+.show_menu {
+  height: 16em;
+}
+
+.rotate {
+  &:nth-child(1) {
+    transform: translate(0, 0.3em);
+  }
+
+  &:nth-child(2) {
+    transform: translate(0, -0.3em);
   }
 }
