updates and smaller images

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
 <app-header [class.show_menu]="menuVisible()"></app-header>
 <div class="header-img">
-  <img src="../assets/img/profile.png" alt="Picture of me :)">
+  <img src="../assets/img/main/profile.png" alt="Picture of me :)">
 </div>
 <app-content></app-content>
 <app-footer></app-footer>
