--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,5 +1,5 @@
 <!-- logo -->
-<img src="../../../assets/img/logo.svg" alt="Paul Scott">
+<img src="../../../assets/img/main/logo.svg" alt="Paul Scott">
 
 <div class="menu_icon" (click)="toggleMenu()">
   <div class="menu_icon_bar" [class.rotate]="menuVisible()"></div>
