--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -20,7 +20,7 @@ app-header {
   position: relative;
   width: 100%;
   height: 50vh;
-  background: url('../assets/img/header_img.jpg') center;
+  background: url('../assets/img/main/header_img.jpg') center;
   background-size: cover;
   border-radius: 0 0 1em 1em;
 
