--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<app-header [class.show_menu]="menuVisible()"></app-header>
+<app-header></app-header>
 <div class="header-img">
   <img src="../assets/img/main/profile.png" alt="Picture of me :)">
 </div>
