--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,19 +1,4 @@
-app-header {
-  z-index: 2;
-  display: block;
-  position: fixed;
-  top: 0;
-  background: #0b96e0aa;
-  backdrop-filter: blur(10px);
-  width: 100%;
-  height: 3em;
-  transition: 0.3s;
-}
-
-.show_menu {
-  height: 19em;
-  border-radius: 0 0 1em 1em;
-}
+@import '../variables';
 
 .header-img {
   display: block;
@@ -22,25 +7,19 @@ app-header {
   height: 50vh;
   background: url('../assets/img/main/header_img.jpg') center;
   background-size: cover;
-  border-radius: 0 0 1em 1em;
+  border-radius: 0 0 3em 3em;
 
-  @media screen and (max-width: 700px) {
+  img {
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
+    height: 40%;
+    border-radius: 50%;
+    margin-top: 1.5em;
+  }
+
+  @media screen and (max-width: $screen-cutoff) {
     height: 40vh;
   }
-}
-
-.header-img img {
-  position: absolute;
-  left: 50%;
-  top: 50%;
-  transform: translate(-50%, -50%);
-  height: 40%;
-  border-radius: 50%;
-  margin-top: 1.5em;
-}
-
-app-content {
-  display: block;
-  margin: auto;
-  max-width: 80em;
 }
