--- a/src/app/components/content/content.component.html
+++ b/src/app/components/content/content.component.html
@@ -8,13 +8,16 @@
 
     <!-- info blocks -->
     <div class="info_block_group">
-      <app-info *ngFor="let info of infoBlockGroup.infoBlockArr"
+      <div class="info_block" *ngFor="let info of infoBlockGroup.infoBlockArr"
                 [class.app_info_link]="info.link != undefined"
                 [ngStyle]="{'background': 'url(' + info.backgroundImg + ') center',
                           'background-size': 'cover'}"
-                [title]="info.title"
-                [description]="info.description"
-                (click)="open(info.link)"></app-info>
+                (click)="open(info.link)">
+        <div class="description">
+          <h1>{{info.title}}</h1>
+          <p>{{info.description}}</p>
+        </div>
+      </div>
     </div>
   </div>
 </div>
