--- a/src/app/components/content/content.component.scss
+++ b/src/app/components/content/content.component.scss
@@ -1,6 +1,12 @@
 @import '../../../variables';
 
-app-info, .app_info_link{
+h1 {
+  font-size: 24px;
+  font-weight: normal;
+  color: whitesmoke;
+}
+
+.info_block, .app_info_link{
   flex: 30%;
   display: block;
   line-height: 1.5;
@@ -26,6 +32,15 @@ app-info, .app_info_link{
 
 .app_info_link:hover {
   box-shadow: 0 0 20px #0b96e0;
+}
+
+.description {
+  width: 100%;
+  padding: 0.5em 1em;
+  background: rgba(0, 0, 0, 0.3);
+  backdrop-filter: blur(20px);
+  text-align: left;
+  color: whitesmoke;
 }
 
 .info_block_group {
