--- a/src/app/components/content/content.component.html
+++ b/src/app/components/content/content.component.html
@@ -21,3 +21,10 @@
     </div>
   </div>
 </div>
+
+<!-- website footer w/ description and contact info -->
+<div class="footer">
+  <p>{{about}}</p>
+  <p>{{contact}}</p>
+  <p>{{lastUpdated}}</p>
+</div>
