--- a/src/app/components/content/content.component.scss
+++ b/src/app/components/content/content.component.scss
@@ -6,6 +6,18 @@ h1 {
   color: whitesmoke;
 }
 
+.footer {
+  display: flex;
+  justify-content: center;
+  align-content: center;
+  flex-direction: column;
+  height: 12em;
+  line-height: 1.5;
+  color: #727272;
+  font-weight: bold;
+  font-size: 20px;
+}
+
 .info_block, .app_info_link {
   flex: 30%;
   display: block;
