updated projects page

--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,7 +1,7 @@
 <header id="header" [class.header_with_menu]="menuVisible()">
 
   <!-- logo -->
-  <img src="../../../assets/img/main/logo.svg" alt="Paul Scott">
+  <img src="../../../assets/images/main/logo.svg" alt="Paul Scott">
 
   <div class="menu_icon" (click)="toggleMenu()">
     <div class="menu_icon_bar" [class.rotate]="menuVisible()"></div>
