--- a/src/app/components/header/header.component.scss
+++ b/src/app/components/header/header.component.scss
@@ -6,6 +6,7 @@ a {
   margin: 0 0.8em;
   text-decoration: none;
   font-size: 20px;
+  text-shadow: 0 0 5px rgba(0, 0, 0, 0.5);
 
   &:hover {
     color: #CCC;
@@ -52,18 +53,18 @@ nav {
 }
 
 .header_scroll {
-  background: #0b96e0aa;
+  background: #00616daa;
   backdrop-filter: blur(10px);
 
   /* firefox only */
   @-moz-document url-prefix() {
-    background: #0b96e0 !important;
+    background: #00616d !important;
     box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.25);
   }
 }
 
 .header_with_menu {
-  height: 20em;
+  height: 24em;
   border-radius: 0 0 3em 3em;
 }
 
@@ -96,7 +97,11 @@ nav {
 }
 
 .menu_height {
-  height: 16em;
+  height: 18em;
+
+  a {
+    margin: 1.5em 0;
+  }
 }
 
 .rotate {
