--- a/src/app/components/content/content.component.html
+++ b/src/app/components/content/content.component.html
@@ -1,22 +1,19 @@
-<div id="content">
+ <!-- info block groups -->
+<div *ngFor="let infoBlockGroup of getInfoBlockGroups()">
+  <div class="section_title">
+    <p>{{infoBlockGroup.title}}</p>
+  </div>
 
-  <!-- info block groups -->
-  <div *ngFor="let infoBlockGroup of getInfoBlockGroups()">
-    <div class="section_title">
-      <p>{{infoBlockGroup.title}}</p>
-    </div>
-
-    <!-- info blocks -->
-    <div class="info_block_group">
-      <div class="info_block" *ngFor="let info of infoBlockGroup.infoBlockArr"
-                [class.app_info_link]="info.link != undefined"
-                [ngStyle]="{'background': 'url(' + info.backgroundImg + ') center',
-                          'background-size': 'cover'}"
-                (click)="open(info.link)">
-        <div class="description">
-          <h1>{{info.title}}</h1>
-          <p>{{info.description}}</p>
-        </div>
+  <!-- info blocks -->
+  <div class="info_group">
+    <div class="info" *ngFor="let info of infoBlockGroup.infoBlockArr"
+         [class.app_info_link]="info.link != undefined"
+         [ngStyle]="{'background': 'url(' + info.backgroundImg + ') center',
+                        'background-size': 'cover'}"
+         (click)="open(info.link)">
+      <div class="description">
+        <h1>{{info.title}}</h1>
+        <p>{{info.description}}</p>
       </div>
     </div>
   </div>
